# shirojudge

./: dockerfile  main.py  pyproject.toml
