[tool.poetry]
name = "shirojudge"
version = "0.1.0"
description = ""
authors = ["Shirotsume <kassyan323@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "*"
numpy = "*"
networkx = "*"
sympy = "*"
sortedcontainers = "*"
more-itertools = "*"
shapely = "*"
bitarray = "*"
PuLP = "*"
mpmath = "*"
pandas = "*"
z3-solver = "*"
scikit-learn = "*"
ac-library-python = { git = "https://github.com/not522/ac-library-python" }
cppyy = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
